fixed spacing between logo and desktop nav elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,8 +386,7 @@ footer {
         display: flex;
         justify-content: flex-end;
         flex-direction: row;
-        margin-right: 10%;
-        margin-top: 10px;
+        margin-top: 30px;
     }
 
     .menu li a{
@@ -413,6 +412,7 @@ footer {
         display: flex;
         align-items: flex-end;
         flex-direction: row;
+        width: 90%;
     }
 
     .hamburger {
